<resources>
    <string name="app_name">纯蜜</string>
    <string name="status_success">success</string>
    <string name="status_error">error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">首页</string>
    <string name="title_square">广场</string>
    <string name="title_message">信息</string>
    <string name="title_mine">我的</string>
    <string name="tab_home_friend">蜜友</string>
    <string name="tab_home_following">关注的人</string>
    <string name="tab_square_official">官方推荐</string>
    <string name="tab_square_popular">人气推荐</string>
    <string name="tab_mine">个人中心</string>
    <string name="tab_message">消息</string>
    <string name="btn_login">登录</string>
    <string name="btn_forget_password">忘记密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="btn_qq">QQ</string>
    <string name="btn_wx">微信</string>
    <string name="btn_weibo">微博</string>
    <string name="btn_add_follow">+关注</string>
    <string name="label_height">身高</string>
    <string name="label_age">年龄</string>
    <string name="label_cup">罩杯</string>
    <string name="btn_talk">私聊ta</string>
    <string name="btn_cancel_follow">取消关注</string>
    <string name="btn_chat">私聊</string>
    <string name="forget_password_title">忘记密码？</string>
    <string name="forget_password_label">上传视频确认是本人，以方便修改密码！</string>
    <string name="upload_video">上传视频</string>
    <string name="upload_confirm">确认上传</string>
    <string name="upload_success">你已成功上传视频认证，请留意短信提醒！</string>
    <string name="back_home">返回首页</string>
    <string name="vip_privilege">会员特权</string>
    <string name="open_vip">开通会员</string>
    <string name="withdraw">我要提现</string>
    <string name="signin_by_phone">手机号码快速登录</string>
    <string name="signin_label">动态登录</string>
    <string name="phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="phone_number_prefix">+86</string>
    <string name="select_sex">选择您的性别</string>
    <string name="select_look">选择您的样貌信息</string>
    <string name="select_height">选择高度</string>
    <string name="select_age">选择年龄</string>
    <string name="select_weight">选择体重</string>
    <string name="step_1_2">1/2</string>
    <string name="step_2_2">2/2</string>
    <string name="btn_confirmed">确定好了</string>
    <string name="input_base_info">填写基本信息</string>
    <string name="label_select_city">常在的城市</string>
    <string name="select_city">选择城市</string>
    <string name="label_select_purpose">交友的目的</string>
    <string name="select_purpose">选择交友目的</string>
    <string name="label_select_job">我的工作是</string>
    <string name="select_job">选择职业</string>
    <string name="start_life">开启交友</string>
    <string name="nickname">昵称</string>
    <string name="always_stay_city_label">常在的城市</string>
    <string name="wechat_number_label">微信号</string>
    <string name="height_label">身高</string>
    <string name="height_value_template">%1$dcm</string>
    <string name="voice_price_template">%1$d蜜币</string>
    <string name="age_label">年龄</string>
    <string name="age_value_template">%1$d岁</string>
    <string name="weight_label">体重</string>
    <string name="weight_value_template">%1$dkg</string>
    <string name="cup_label">罩杯</string>
    <string name="self_introduction">自我介绍（可不填）</string>
    <string name="self_introduction_hint">用最简单的语句表达自己</string>
    <string name="edit_user_title">编辑个人信息</string>
    <string name="has_not_authenticate">您还未通过纯蜜官方真人验证！</string>
    <string name="viewVisitor">查看对方</string>
    <string name="recent_visitor">最近访客</string>
    <string name="followme_title">关注我的</string>
    <string name="dating_list_title">我的约会</string>
    <string name="user_info_title">用户详情</string>
    <string name="add_image">添加图片</string>
    <string name="mine_not_authenticate_tip">你还未通过纯蜜官方认证！</string>
    <string name="mine_under_authenticate_tip">认证中...请等待官方人员审核！</string>
    <string name="mine_under_authenticate">认证中</string>
    <string name="mine_authenticate_not_pass_tip">认证未通过，请重新认证！</string>
    <string name="mine_authenticate">立即认证</string>
    <string name="mine_max_photo_number_tip">最多可以上传19张图片</string>
    <string name="upgrade_member_title">开通纯蜜会员</string>
    <string name="chunmi_vip">纯蜜会员</string>
    <string name="pay_amount_template">支付金额：%1$s元</string>
    <string name="vip_privilege_text">【看的更多】   每天不限次数查看女士\n【看得看省】   每天10次免费机会查看付费相册或联系方式\n【看的更久】   查看阅后即焚照片的时间从2秒提升到6秒\n【约的更爽】   免费发布约会广播</string>
    <string name="vip_period">会员有效期</string>
    <string name="vip_recommend">推荐</string>
    <string name="new_user">新人</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="publish_dating">发布约会</string>
    <string name="publish_dating_confirm">确认发布</string>
    <string name="upload_photo">添加图片</string>
    <string name="upload_photo_tip">你还未上传过图片，点击上传你的第一张图片</string>
    <string name="dating_expired">已过期</string>
    <string name="dating_address_template">约会地点：%1$s</string>
    <string name="dating_time_template">约会时间：%1$s</string>
    <string name="dating_join_template">参加的人：%1$s人想要参加</string>
    <string name="dating_with_template">约会的人：%1$s</string>
    <string name="dating_ending_time_template">离结束发布有效时间还有%1$s</string>
    <string name="cancel_dating">取消约会</string>
    <string name="view_requester">查看申请</string>
    <string name="report_title">举报内容</string>
    <string name="report_reason">请选择投诉理由</string>
    <string name="report_ad">骚扰广告</string>
    <string name="report_fake">虚假信息</string>
    <string name="report_bilk">诈骗用户</string>
    <string name="report_attachment_tip">请提供相关截图信息，以便我们跟进核实</string>
    <string name="report_des_tip">补充描述（可不填）</string>
    <string name="report_des_hint">请填写内容</string>
    <string name="my_wallet">我的钱包</string>
    <string name="album_permission">相册查看权限</string>
    <string name="album_permission_public">全部公开</string>
    <string name="album_permission_need_pay">查看收取费用</string>
    <string name="album_permission_need_my_agree">查看需要通过我的验证</string>
    <string name="album_permission_private">任何人都不能看</string>
    <string name="confirm">确定</string>
    <string name="privacy_lock_title">设置密码锁</string>
    <string name="create_privacy_lock_tip">设置应用开启隐私密码</string>
    <string name="privacy_lock_des">每次输入密码时，为倒序密码，输入正序密码时会跳转到星座资讯</string>
    <string name="create_privacy">设置密码</string>
    <string name="share_wechat">微信朋友圈</string>
    <string name="share_qq">QQ空间</string>
    <string name="share_weibo">微博</string>
    <string name="cancel">取消</string>
    <string name="add_attention">关注对方</string>
    <string name="view_detail">查看详情</string>
    <string name="publish_time_template">发布时间 %1$s</string>
    <string name="distance_of_template">距离你%1$s</string>
    <string name="view_dating_tip">看看他发布的约会消息</string>
    <string name="view_dating">查看</string>
    <string name="view_the_dating">查看约会</string>
    <string name="publish_time">发布时间</string>
    <string name="sort_by_distance">距离排序</string>
    <string name="dating_content">约会内容</string>
    <string name="friend_recommend">好友推荐</string>
    <string name="query_message">查找消息</string>
    <string name="friend_tag_newer">最近新人</string>
    <string name="find_city">查找城市</string>
    <string name="confirm_again">再次确认</string>
    <string name="input_password_again_title">再输入一次密码</string>
    <string name="set_lock_title">设置密码锁</string>
    <string name="please_select">请选择</string>
    <string name="pick_voice_price">请选择语音通话价格(蜜币)</string>
    <string name="pick_height">请选择身高(cm)</string>
    <string name="pick_age">请选择年龄</string>
    <string name="pick_weight">请选择体重(kg)</string>
    <string name="select_cup">选择罩杯</string>
    <string name="pick_cup">请选择罩杯</string>
    <string name="verification_code_has_send">验证码已发送</string>
    <string name="bind_phone_success">绑定成功</string>
    <string name="friend_tag_popular">人气最高</string>
    <string name="friend_tag_nearest">距离最近</string>
    <string name="friend_tag_hottest">身材最好</string>
    <string name="join_dating">我要参加</string>
    <string name="joined_dating">你已参加此约会</string>
    <string name="follow">+关注对方</string>
    <string name="followed">已关注</string>
    <string name="unit_cm">cm</string>
    <string name="unit_age">岁</string>
    <string name="unit_km">km</string>
    <string name="unit_kg">kg</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_failed">修改失败</string>
    <string name="chat_price_template">对方聊天已设置为1分钟%1$s蜜币</string>
    <string name="introduce_label">个人介绍</string>
    <string name="frequent_city_label">常在地点</string>
    <string name="unfill">未留下只言片语</string>
    <string name="unknown">未知</string>
    <string name="program_label">约会节目</string>
    <string name="dating_address">约会地点</string>
    <string name="select_dating_address">选择地点</string>
    <string name="dating_time">约会天数</string>
    <string name="select_dating_time">选择天数</string>
    <string name="select_daytime">选择日期</string>
    <string name="dating_program">约会节目</string>
    <string name="select_dating_program">选择标签</string>
    <string name="query_location">搜索</string>
    <string name="location_picker_title">选择地点</string>
    <string name="search_result">搜索结果</string>
    <string name="search_result_templete">搜索“%1$s”</string>
    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
    <string name="dating_date_template">%1$d年%2$d月%3$d日</string>
    <string name="days_template">%1$d天</string>
    <string name="publish_success">发布成功</string>
    <string name="price_label">填写红包</string>
    <string name="price_hint">输入金额</string>
    <string name="mibi_price_label">收取蜜币</string>
    <string name="mibi_picker_hint">选择蜜币数量</string>
    <string name="please_select_mibi_amount">请选择蜜币数量</string>
    <string name="amout_mibi_template">%1$s蜜币</string>
    <string name="unlock_all">全部解锁</string>
    <string name="pay_money">红包付费</string>
    <string name="album_permission_setting">设置相册权限</string>
    <string name="create_privacy_success">设置成功</string>
    <string name="password_validate_no_equal">与前一次输入的密码不一致</string>
    <string name="close_privacy_password">关闭隐私密码</string>
    <string name="close_privacy_password_success">关闭隐私密码成功</string>
    <string name="unit_rmb">元</string>
    <string name="unit_month">月</string>
    <string name="member_duration_template">%1$s个月</string>
    <string name="member_price_template">%1$s元/月</string>
    <string name="create_order_failed">创建订单失败</string>
    <string name="buy_failed">购买失败</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_member_failed">购买失败</string>
    <string name="buy_member_success">购买成功</string>
    <string name="wechat_auth_failed">微信授权失败</string>
    <string name="friend_tag_more_filter">更多筛选</string>
    <string name="friend_more_filter">条件筛选</string>
    <string name="height_start">160cm</string>
    <string name="height_end">220cm</string>
    <string name="age_start">16周岁</string>
    <string name="age_end">40周岁</string>
    <string name="cup_end">g</string>
    <string name="cup_start">a</string>
    <string name="query_by_filter">按筛选查找</string>
    <string name="cannot_get_location">无法获取位置</string>
    <string name="view_dating_detail">查看发布详情</string>
    <string name="use_help">使用帮助</string>
    <string name="give_me_star">给我评分</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="about_title">关于纯蜜</string>
    <string name="copyright">中山市苏格拉底网络科技有限公司版权所有</string>
    <string name="auth_title">认证</string>
    <string name="auth_step1">步骤一</string>
    <string name="auth_step1_tip">取一张纸，写上你的昵称和下面号码</string>
    <string name="auth_step2">步骤二</string>
    <string name="auth_step2_tip">拿着纸与你的头像所示部位合照一张</string>
    <string name="auth_notice">温馨提示：更换头像后需要重新认证</string>
    <string name="start_auth">开始认证</string>
    <string name="auth_wait_review">请耐心等待工作人员审核</string>
</resources>