<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--android:icon="@drawable/ic_home_black_24dp"-->

    <item
        android:id="@+id/navigation_home"
        android:icon="@null"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_square"
        android:icon="@null"
        android:title="@string/title_square"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@null"
        android:title="@string/title_message"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@null"
        android:title="@string/title_mine"
        app:showAsAction="always" />
</menu>
