<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.privacy.AlbumPermissionSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/album_permission"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_normal" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/album_permission_public"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/album_permission_need_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/album_permission_need_my_agree"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/album_permission_private"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_normal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/album_permission_setting_btn_selector"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_large" />

    </LinearLayout>
</FrameLayout>