<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.privacy.CreateLockFragment">

    <com.snt.phoney.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/toolbarBackground"
        android:theme="@style/AppTheme.PopupOverlay"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/privacy_lock_title"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_privacy_tip" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/create_privacy_lock_tip"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_larger" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/privacy_lock_des"
        android:textColor="@color/gray"
        android:textSize="@dimen/textsize_small" />

    <Button
        android:id="@+id/closePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_primary_circle_corner_selector"
        android:text="@string/close_privacy_password"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal"
        android:visibility="gone" />

    <Button
        android:id="@+id/setPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_primary_circle_corner_selector"
        android:text="@string/create_privacy"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

</LinearLayout>