<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".ui.about.AboutFragment">

    <com.snt.phoney.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/toolbarBackground"
        android:theme="@style/AppTheme.PopupOverlay"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/about_title"
        app:titleTextColor="@color/white" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_launcher" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/hello_blank_fragment" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/underline_gray_with_selectable_white_bg"
        android:clickable="true"
        android:drawableRight="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/use_help"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/star"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/underline_gray_with_selectable_white_bg"
        android:clickable="true"
        android:drawableRight="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/give_me_star"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/underline_gray_with_selectable_white_bg"
        android:clickable="true"
        android:drawableRight="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_normal" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/copyright"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/textsize_smaller" />

</LinearLayout>