<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    tools:context=".ui.password.ForgetPasswordFragment">

    <data class="ForgetPasswordFragmentBinding">

        <variable
            name="viewModel"
            type="com.snt.phoney.ui.password.ForgetPasswordViewModel"></variable>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"></android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/uploadLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forget_password_title"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/forget_password_label"
                android:textSize="@dimen/textsize_largest" />

            <FrameLayout
                android:id="@+id/recordVideo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:clickable="true">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/forget_password_dash_border_bg"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:text="@string/upload_video" />
            </FrameLayout>

            <Button
                android:id="@+id/uploadConfirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_rounded_corner_selector"
                android:text="@string/upload_confirm"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/successLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/upload_success"
                android:textColor="@color/darker"
                android:textSize="@dimen/textsize_largest" />


            <Button
                android:id="@+id/backHome"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button_rounded_corner_selector"
                android:text="@string/back_home"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>